Implemented poem parsing and rhyming scheme calculation